Extended TreeType system and added Quark recipe workarounds